--- a/styles-meme-gen.css
+++ b/styles-meme-gen.css
@@ -8,7 +8,7 @@ body {
     height: 100%;
     padding: 5%;
 
-    background: url(/meme-gen-assets/wesley-tingey-AZtMXheXnWc-unsplash.jpg);
+    background: url(./meme-gen-assets/wesley-tingey-AZtMXheXnWc-unsplash.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
